==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Changelog
=========

 - Fixed issue which prevents blob directories from being removed after a
   ``drop blob table`` command when a custom blob location is configured.

 - BREAKING: Changed default bind and publish address from ``0.0.0.0`` to
   the system ``loopback`` addresses.